# screenshotgun

./: .appveyor.yml  .dir-locals.el  .editorconfig  .gitignore  .travis.yml  CHANGELOG.txt  CMakeLists.txt  README.md  canvas.cpp  canvas.h  canvas.qml  canvasprovider.cpp  canvasprovider.h  const.h  editorform.cpp  editorform.h  editorform.ui  editorview.cpp  editorview.h  main.cpp  newversion.cpp  newversion.h  newversion.ui  open-screen-cloud.pro  res.qrc  screenshotgun.pro  server.cpp  server.h  settings.cpp  settings.h  settings.ui  visiblearea.cpp  visiblearea.h
deploy/arch/: Dockerfile  PKGBUILD  aur.enc  deploy.sh  deploy_build.sh  secomp-profile.json
deploy/aur/: aur.enc  deploy.sh  deploy_build.sh
deploy/data/: deploy.tar.enc
deploy/deb/: deploy.sh  launchpad.asc.enc
deploy/deb/debian/: README.source  changelog  control  copyright
deploy/launchpad/: deploy.sh  dput.cf  launchpad.asc.enc  launchpad_public.asc
doc/: _build.sh  build.sh  ubuntu_install.sh
installer/: create-installer-osx.sh  create-installer-win.sh  create-repository-osx.sh  create-repository-win.sh
installer/config/: config.xml  controlscript.qs
installer/config-osx/: config.xml  controlscript.qs
installer/config-win/: config.xml
installer/installer-repository-osx/: Updates.xml
installer/installer-repository-osx/screenshotgun/: 0.17-20180122-4meta.7z  0.17-20180122-4screenshotgun.app.7z.sha1
installer/installer-repository-win/: Updates.xml
installer/installer-repository-win/libs/: 0.12content.7z.sha1  0.12meta.7z  0.12platforms.7z  0.12platforms.7z.sha1
installer/installer-repository-win/screenshotgun/: 0.19-20201010-14content.7z  0.19-20201010-14content.7z.sha1  0.19-20201010-14meta.7z
installer/packages-osx/screenshotgun/data/screenshotgun.app/Contents/: Info.plist
installer/packages-osx/screenshotgun/data/screenshotgun.app/Contents/MacOS/: screenshotgun
installer/packages-osx/screenshotgun/data/screenshotgun.app/Contents/PlugIns/bearer/: libqcorewlanbearer.dylib  libqgenericbearer.dylib
installer/packages-osx/screenshotgun/data/screenshotgun.app/Contents/PlugIns/iconengines/: libqsvgicon.dylib
installer/packages-osx/screenshotgun/data/screenshotgun.app/Contents/PlugIns/imageformats/: libqgif.dylib  libqicns.dylib  (+7 more)
installer/packages-osx/screenshotgun/meta/: installscript.qs  package.xml
installer/packages-win/libs/meta/: package.xml
installer/packages-win/screenshotgun/meta/: installscript.qs  package.xml
modes/: abstractmode.cpp  abstractmode.h  linemode.cpp  linemode.h  rectmode.cpp  rectmode.h  visibleareamode.cpp  visibleareamode.h
resources/: res.qrc  style.qss
scripts/: deploy.sh  make-tag.py  make_tag.sh
scripts/before_deploy/linux/: before_deploy.sh
scripts/before_deploy/osx/: before_deploy.sh
scripts/before_deploy/windows/: before_deploy.sh
scripts/ci/linux/: before_deploy.sh  before_install.sh  deploy.sh  install.sh  script.sh
scripts/ci/osx/: before_deploy.sh  before_install.sh  install.sh  script.sh
scripts/ci/windows/: before_deploy.sh  before_install.sh  install.sh  script.sh
scripts/ci/windows/scripts/: qt_installer_windows.qs
scripts/deploy/: data.tar.enc
scripts/deploy/aur/: PKGBUILD  deploy.sh  deploy_build.sh
scripts/deploy/launchpad/: deploy.sh  dput.cf
scripts/deploy/launchpad/debian/: README.Debian  changelog
src/: App.cpp  App.h  AppView.cpp  AppView.h  Autostartup.cpp  Autostartup.h  Changelog.h.in  Context.cpp  Context.h  History.cpp  History.h  OAuth.cpp  OAuth.h  Overlay.cpp  Overlay.h  OverlayView.cpp  OverlayView.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Server.cpp  Server.h  Settings.cpp  Settings.h  SettingsForm.cpp  SettingsForm.h  System.cpp  System.h  Toolbar.cpp  Toolbar.h  TrayIcon.cpp  TrayIcon.h  TrayIcon.mm  Updater.cpp  Updater.h  Updater_win.cpp  Updater_win.h  autostartup.cpp  autostartup.h  (+19 more)
src/items/: AbstractItem.cpp  AbstractItem.h  ArrowItem.cpp  ArrowItem.h  EllipseItem.cpp  EllipseItem.h  LineItem.cpp  LineItem.h  RectItem.cpp  RectItem.h  VisibleAreaItem.cpp  VisibleAreaItem.h
src/modes/: AbstractMode.cpp  AbstractMode.h  ArrowMode.cpp  ArrowMode.h  EllipseMode.cpp  EllipseMode.h  LineMode.cpp  LineMode.h  RectMode.cpp  RectMode.h  TextArea.cpp  TextArea.h  TextMode.cpp  TextMode.h  VisibleAreaMode.cpp  VisibleAreaMode.h  VisibleAreaRect.cpp  VisibleAreaRect.h  abstractmode.cpp  abstractmode.h  arrowmode.cpp  arrowmode.h  linemode.h  visibleareamode.cpp  visibleareamode.h
src/modes/items/: AbstractItem.cpp  AbstractItem.h  ArrowItem.cpp  ArrowItem.h  EllipseItem.cpp  EllipseItem.h  ItemFactory.cpp  ItemFactory.h  LineItem.cpp  LineItem.h  PathItem.cpp  PathItem.h  RectItem.cpp  RectItem.h  TextItem.cpp  TextItem.h
src/modes/items/graphicitems/: AbstractGraphicItem.cpp  AbstractGraphicItem.h  EllipseGraphicItem.cpp  EllipseGraphicItem.h  LineGraphicItem.cpp  LineGraphicItem.h  PathGraphicItem.cpp  PathGraphicItem.h  RectGraphicItem.cpp  RectGraphicItem.h
src/qxt/: qxtglobalshortcut.cpp  qxtglobalshortcut_x11.cpp
src/services/: Clipboard.cpp  Clipboard.h  Dropbox.cpp  Dropbox.h  Google.cpp  Google.h  Server.cpp  Server.h  ServiceHelper.cpp  ServiceHelper.h  Yandex.cpp  Yandex.h
src/services/lib/: AbstractService.cpp  AbstractService.h  UploadService.h  generateFilename.cpp  generateFilename.h
src/tools/: AbstractMode.h  ArrowMode.h  LineMode.cpp  LineMode.h  TextArea.h  VisibleAreaMode.cpp
src/tools/items/: ArrowItem.cpp  EllipseItem.cpp  EllipseItem.h  LineItem.cpp  RectItem.cpp  RectItem.h
src/tools/items/graphicitems/: AbstractGraphicItem.h  EllipseGraphicItem.cpp  PathGraphicItem.h
src/ui/: ItemManager.cpp  ItemManager.h  OAuth.cpp  OAuth.h  Overlay.cpp  Overlay.h  OverlayView.cpp  OverlayView.h  SettingsForm.cpp  SettingsForm.h  Toolbar.cpp  Toolbar.h  TrayIcon.cpp  TrayIcon.h  Updater.cpp  Updater.h
src/utils/: AutoStartup.cpp  AutoStartup.h  Changelog.h.in  History.cpp  History.h  Settings.cpp  Settings.h  System.cpp  System.h
ui/: NewVersion.ui  OAuth.ui  Settings.ui  Toolbar.ui  Update.ui  editorform.ui  newversion.ui  settings.ui
(+10 files in other folders)
